fix: add check for package.json existence before deployment in GitHub Actions workflow

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -49,7 +49,12 @@ jobs:
           USERNAME: ${{ secrets.VPS_USERNAME }}
         run: |
           ssh $USERNAME@$HOST "
-            cd /var/www/contact-management-nestjs/backend &&
-            npm install --omit=dev &&
-            pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
+            if [ -f /var/www/contact-management-nestjs/backend/package.json ]; then
+              cd /var/www/contact-management-nestjs/backend &&
+              npm install --omit=dev &&
+              pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
+            else
+              echo 'package.json not found in /var/www/contact-management-nestjs/backend'
+              exit 1
+            fi
           "
