--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -54,5 +54,5 @@ jobs:
             # Install dependencies
             npm install --omit=dev &&
             # Restart aplikasi menggunakan PM2
-            pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
+            pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend -f
           "
