fix: update deployment workflow to create .env file with DATABASE_URL and other variables

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -48,7 +48,13 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $HOST >> ~/.ssh/known_hosts
-          rsync -avz --exclude=node_modules --exclude=.git ./package.json ./package-lock.json ./dist $USERNAME@$HOST:/var/www/contact-management-nestjs/backend
+          rsync -avz --exclude=node_modules --exclude=.git ./dist $USERNAME@$HOST:/var/www/contact-management-nestjs/backend
+          
+          # Create .env file on the VPS with the DATABASE_URL
+          ssh $USERNAME@$HOST "echo 'DATABASE_URL=${DATABASE_URL}' > /var/www/contact-management-nestjs/backend/.env"
+          ssh $USERNAME@$HOST "echo 'DATABASE=${DATABASE}' > /var/www/contact-management-nestjs/backend/.env"
+          ssh $USERNAME@$HOST "echo 'PORT=${PORT}' > /var/www/contact-management-nestjs/backend/.env"
+          
       # 7. Jalankan migrasi Prisma dan restart aplikasi menggunakan PM2
       - name: Restart Application
         env:
@@ -60,8 +66,6 @@ jobs:
         run: |
           ssh $USERNAME@$HOST "
             cd /var/www/contact-management-nestjs/backend &&
-            # Install dependencies again to ensure all are present after copy
-            npm install --omit=dev &&
             # Restart aplikasi menggunakan PM2
             pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
           "
