--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -48,7 +48,7 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $HOST >> ~/.ssh/known_hosts
-          rsync -avz --exclude=node_modules --exclude=.git ./dist $USERNAME@$HOST:/var/www/contact-management-nestjs/backend
+          rsync -avz --exclude=node_modules --exclude=.git ./package.json ./package-lock.json ./dist $USERNAME@$HOST:/var/www/contact-management-nestjs/backend
           
           # Create .env file on the VPS with the DATABASE_URL
           ssh $USERNAME@$HOST "echo 'DATABASE_URL=${{ secrets.DATABASE_URL }}' >> /var/www/contact-management-nestjs/backend/.env"
@@ -60,12 +60,9 @@ jobs:
         env:
           HOST: ${{ secrets.VPS_HOST }}
           USERNAME: ${{ secrets.VPS_USERNAME }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}  # Ensure the env var is available for PM2
-          DATABASE: ${{ secrets.DATABASE }}  # Ensure the env var is available for PM2
-          PORT: ${{ secrets.PORT }}  # Ensure the env var is available for PM2
         run: |
           ssh $USERNAME@$HOST "
             cd /var/www/contact-management-nestjs/backend &&
-            # Restart aplikasi menggunakan PM2
+            npm install --omit=dev &&
             pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
           "
