fix: update PM2 command to use startOrRestart for deployment

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -71,5 +71,5 @@ jobs:
           ssh $USERNAME@$HOST "
             cd /var/www/contact-management-nestjs/backend &&
             npm install --omit=dev &&
-            pm2 start dist/main.js --name contact-management-nestjs-backend || pm2 restart contact-management-nestjs-backend
+            pm2 startOrRestart dist/main.js --name contact-management-nestjs-backend
           "
